--- a/styles.css
+++ b/styles.css
@@ -25,3 +25,13 @@ body, a:link, a:visited, a:active{
   border-radius:10px;
   position:absolute;
 }
+ .bouncy-dancer{
+  border:10px solid green;
+  border-radius:10px;
+  position:relative;
+}
+.RickAstley-dancer{
+  border:10px solid blue;
+  border-radius:10px;
+  position:relative;
+}
